Fix spacing on front end.

--- a/src/block/style.scss
+++ b/src/block/style.scss
@@ -31,6 +31,10 @@
     }
   }
 
+  .lyrics-content {
+    margin-bottom: 40px;
+  }
+
   .lyrics-heading {
     font-family: cursive;
     margin: 0;
